--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       --gold:#d4af37;
       --card-bg:#0b0b0b;
       --muted:#bfc6c9;
+      --correct:#4caf50;
+      --wrong:#f44336;
     }
     body{margin:0;font-family:Inter, Poppins, sans-serif;background:linear-gradient(180deg,#070707,#0c0c0c);color:#fff;min-height:100vh;
       display:flex;align-items:center;justify-content:center;padding:20px;}
@@ -18,8 +20,11 @@
     h1{margin:0 0 8px;color:var(--gold)}
     p.lead{margin:0 0 18px;color:var(--muted)}
     .code-row{display:flex;gap:10px;align-items:center;margin-bottom:18px}
-    input[type="text"]{padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.06);background:#0b0f10;color:#fff}
-    .btn{background:linear-gradient(90deg,var(--gold), #f0d56a);color:#111;padding:10px 12px;border-radius:10px;border:none;font-weight:700;cursor:pointer}
+    input[type="text"]{padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.06);background:#0b0f10;color:#fff;transition:border 0.3s;}
+    input.correct{border-color:var(--correct);}
+    input.wrong{border-color:var(--wrong);}
+    .btn{background:linear-gradient(90deg,var(--gold), #f0d56a);color:#111;padding:10px 12px;border-radius:10px;border:none;font-weight:700;cursor:pointer;transition:all .2s}
+    .btn:hover{transform:scale(1.05)}
     .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:14px}
     .card{
       height:140px;border-radius:10px;background:linear-gradient(180deg,#0b0b0b,#151515);border:1px solid rgba(212,175,55,0.06);
@@ -31,10 +36,13 @@
     .card .label{font-size:16px;color:var(--muted)}
     .card.revealed{background:linear-gradient(180deg, rgba(212,175,55,0.08), rgba(212,175,55,0.02));color:#000}
     .badge{
-      position:absolute;top:10px;right:10px;padding:6px 8px;border-radius:8px;background:rgba(0,0,0,0.4);font-weight:700;color:var(--gold)
+      position:absolute;top:10px;right:10px;padding:6px 8px;border-radius:8px;background:rgba(0,0,0,0.4);font-weight:700;color:var(--gold);transition:all .3s;
     }
     .result-area{margin-top:16px}
     .small{font-size:13px;color:var(--muted)}
+    @media (max-width:640px){
+      .grid{grid-template-columns:repeat(3,1fr)}
+    }
   </style>
 </head>
 <body>
@@ -48,14 +56,10 @@
       <div style="margin-left:auto" class="small" id="status">Status: belum terkoneksi</div>
     </div>
 
-    <div id="gridWrap" class="grid" aria-live="polite" aria-atomic="true">
-      <!-- 9 kartu -->
-    </div>
-
+    <div id="gridWrap" class="grid" aria-live="polite" aria-atomic="true"></div>
     <div class="result-area" id="resultArea"></div>
   </div>
 
-  <!-- Firebase -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
     import { getFirestore, doc, getDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
@@ -73,7 +77,6 @@
     const db = getFirestore(app);
     const docRef = doc(db, "gameConfig", "cards");
 
-    // UI refs
     const gridWrap = document.getElementById('gridWrap');
     const verifyBtn = document.getElementById('verifyBtn');
     const codeInput = document.getElementById('codeInput');
@@ -84,7 +87,6 @@
     let unlocked = false;
     let revealed = new Set();
 
-    // build 9 placeholder cards
     function buildGrid(){
       gridWrap.innerHTML = '';
       for(let i=0;i<9;i++){
@@ -97,8 +99,11 @@
       }
     }
 
-    function setStatus(txt){
+    function setStatus(txt, type='info'){
       status.textContent = 'Status: ' + txt;
+      codeInput.classList.remove('correct','wrong');
+      if(type==='correct') codeInput.classList.add('correct');
+      if(type==='wrong') codeInput.classList.add('wrong');
     }
 
     async function fetchConfig(){
@@ -108,12 +113,10 @@
         if(snap.exists()){
           serverConfig = snap.data();
           setStatus('siap - data tersedia');
-          // live listen for updates
           onSnapshot(docRef, (s)=>{
             if(!s.exists()) return;
             serverConfig = s.data();
             setStatus('data diupdate oleh admin');
-            // if user already unlocked, no need to lock again; else reflect changes visually
             if(!unlocked) buildGrid();
           });
         }else{
@@ -121,27 +124,22 @@
           setStatus('belum ada konfigurasi (tunggu admin)');
         }
       }catch(err){
-        console.error(err); setStatus('gagal memuat: '+err.message);
+        console.error(err); setStatus('gagal memuat: '+err.message,'wrong');
       }
     }
 
     function onCardClick(e){
       const el = e.currentTarget;
       const idx = Number(el.dataset.index);
-      if(!unlocked){
-        // not allowed
-        return;
-      }
-      if(revealed.has(idx)) return; // sudah dibuka
-      // reveal according to serverConfig.cards
-      const cards = serverConfig && serverConfig.cards ? serverConfig.cards : null;
-      const value = (cards && cards[idx]) ? cards[idx] : 'Kosong';
+      if(!unlocked || revealed.has(idx)) return;
+
+      const cards = serverConfig?.cards || [];
+      const value = cards[idx] || 'Kosong';
       el.classList.add('revealed');
       el.querySelector('.label').textContent = value;
-      el.querySelector('.badge').textContent = value === 'Platinum' ? 'P' : (value === 'Diamond' ? 'D' : (value === 'Super Diamond' ? 'S' : '?'));
+      el.querySelector('.badge').textContent = value==='Platinum'?'P':value==='Diamond'?'D':value==='Super Diamond'?'S':'?';
       revealed.add(idx);
 
-      // optionally show small message
       const msg = document.createElement('div');
       msg.className = 'small';
       msg.textContent = `Kamu membuka Kartu ${idx+1}: ${value}`;
@@ -151,21 +149,19 @@
     verifyBtn.addEventListener('click', ()=>{
       const code = (codeInput.value || '').trim();
       if(!serverConfig){
-        setStatus('tidak ada konfigurasi di server');
+        setStatus('tidak ada konfigurasi di server','wrong');
         return;
       }
-      if(code === (serverConfig.code || '')){
+      if(code === serverConfig.code){
         unlocked = true;
-        setStatus('kode benar — kamu boleh menebak!'); 
-        // enable cards visually
+        setStatus('kode benar — kamu boleh menebak!', 'correct');
         document.querySelectorAll('.card').forEach(c=>c.classList.remove('locked'));
       }else{
         unlocked = false;
-        setStatus('kode salah — coba lagi');
+        setStatus('kode salah — coba lagi','wrong');
       }
     });
 
-    // init
     buildGrid();
     fetchConfig();
   </script>
