--- a/index.html
+++ b/index.html
@@ -1,169 +1,123 @@
 <!doctype html>
 <html lang="id">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>User - Tebak Kartu</title>
-  <style>
-    :root{
-      --bg:#080808;
-      --panel:#0f1113;
-      --gold:#d4af37;
-      --card-bg:#0b0b0b;
-      --muted:#bfc6c9;
-      --correct:#4caf50;
-      --wrong:#f44336;
-    }
-    body{margin:0;font-family:Inter, Poppins, sans-serif;background:linear-gradient(180deg,#070707,#0c0c0c);color:#fff;min-height:100vh;
-      display:flex;align-items:center;justify-content:center;padding:20px;}
-    .wrap{width:100%;max-width:920px;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(0,0,0,0.02));padding:20px;border-radius:12px;border:1px solid rgba(212,175,55,0.06)}
-    h1{margin:0 0 8px;color:var(--gold)}
-    p.lead{margin:0 0 18px;color:var(--muted)}
-    .code-row{display:flex;gap:10px;align-items:center;margin-bottom:18px}
-    input[type="text"]{padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.06);background:#0b0f10;color:#fff;transition:border 0.3s;}
-    input.correct{border-color:var(--correct);}
-    input.wrong{border-color:var(--wrong);}
-    .btn{background:linear-gradient(90deg,var(--gold), #f0d56a);color:#111;padding:10px 12px;border-radius:10px;border:none;font-weight:700;cursor:pointer;transition:all .2s}
-    .btn:hover{transform:scale(1.05)}
-    .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:14px}
-    .card{
-      height:140px;border-radius:10px;background:linear-gradient(180deg,#0b0b0b,#151515);border:1px solid rgba(212,175,55,0.06);
-      display:flex;align-items:center;justify-content:center;cursor:pointer;position:relative;overflow:hidden;
-      transition:transform .25s, box-shadow .25s;
-    }
-    .card:hover{transform:translateY(-6px);box-shadow:0 12px 30px rgba(0,0,0,0.4)}
-    .card.locked{filter:grayscale(.2) blur(0.2px);cursor:not-allowed;opacity:.9}
-    .card .label{font-size:16px;color:var(--muted)}
-    .card.revealed{background:linear-gradient(180deg, rgba(212,175,55,0.08), rgba(212,175,55,0.02));color:#000}
-    .badge{
-      position:absolute;top:10px;right:10px;padding:6px 8px;border-radius:8px;background:rgba(0,0,0,0.4);font-weight:700;color:var(--gold);transition:all .3s;
-    }
-    .result-area{margin-top:16px}
-    .small{font-size:13px;color:var(--muted)}
-    @media (max-width:640px){
-      .grid{grid-template-columns:repeat(3,1fr)}
-    }
-  </style>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>User - Tebak Kartu</title>
+<style>
+body{margin:0;font-family:Inter,Poppins,sans-serif;background:#080808;color:#fff;display:flex;justify-content:center;align-items:center;padding:20px;min-height:100vh;}
+.wrap{width:100%;max-width:920px;background:#111;padding:20px;border-radius:12px;border:1px solid rgba(212,175,55,0.1);}
+h1{color:#d4af37;margin:0 0 8px;}
+.code-row{display:flex;gap:10px;align-items:center;margin-bottom:18px;}
+input{padding:10px;border-radius:8px;border:none;background:#0b0f10;color:#fff;}
+.btn{background:#d4af37;color:#111;padding:10px 12px;border-radius:8px;border:none;cursor:pointer;}
+.grid{display:grid;grid-template-columns:repeat(3,1fr);gap:14px;}
+.card{height:140px;border-radius:10px;background:#0b0b0b;border:1px solid rgba(212,175,55,0.05);display:flex;align-items:center;justify-content:center;cursor:pointer;position:relative;transition:transform .25s;}
+.card:hover{transform:translateY(-6px);box-shadow:0 12px 30px rgba(0,0,0,0.4);}
+.card.locked{filter:grayscale(.2) blur(.2px);cursor:not-allowed;}
+.card.revealed{background:rgba(212,175,55,0.1);}
+.card .label{color:#bfc6c9;}
+.badge{position:absolute;top:10px;right:10px;background:rgba(0,0,0,0.4);color:#d4af37;padding:4px 6px;border-radius:6px;font-weight:700;}
+.result-area{margin-top:16px;}
+.small{font-size:13px;color:#bfc6c9;}
+</style>
 </head>
 <body>
-  <div class="wrap">
-    <h1>Game Tebak Kartu</h1>
-    <p class="lead">Masukkan kode yang diberikan admin lalu tebak salah satu dari 9 kartu.</p>
+<div class="wrap">
+<h1>Tebak Kartu</h1>
+<div class="code-row">
+<input id="codeInput" placeholder="Kode akses..."/>
+<button id="verifyBtn" class="btn">Verify</button>
+<div class="small" id="status">Status: belum terkoneksi</div>
+</div>
+<div id="gridWrap" class="grid"></div>
+<div class="result-area" id="resultArea"></div>
+</div>
 
-    <div class="code-row">
-      <input id="codeInput" placeholder="Masukkan kode akses..." />
-      <button id="verifyBtn" class="btn">Verify</button>
-      <div style="margin-left:auto" class="small" id="status">Status: belum terkoneksi</div>
-    </div>
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+import { getFirestore, doc, getDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
 
-    <div id="gridWrap" class="grid" aria-live="polite" aria-atomic="true"></div>
-    <div class="result-area" id="resultArea"></div>
-  </div>
+const firebaseConfig = {
+apiKey: "AIzaSyDzikWeuSIoMTCC6wsD64NnX5bLQQvM2dA",
+authDomain: "ariptoto-93af7.firebaseapp.com",
+projectId: "ariptoto-93af7",
+storageBucket: "ariptoto-93af7.appspot.com",
+messagingSenderId: "703805134804",
+appId: "1:703805134804:web:402e7f9e378ae1ecdb2841"
+};
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-    import { getFirestore, doc, getDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+const docRef = doc(db,"gameConfig","cards");
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyDzikWeuSIoMTCC6wsD64NnX5bLQQvM2dA",
-      authDomain: "ariptoto-93af7.firebaseapp.com",
-      projectId: "ariptoto-93af7",
-      storageBucket: "ariptoto-93af7.appspot.com",
-      messagingSenderId: "703805134804",
-      appId: "1:703805134804:web:402e7f9e378ae1ecdb2841"
-    };
+const gridWrap=document.getElementById('gridWrap');
+const verifyBtn=document.getElementById('verifyBtn');
+const codeInput=document.getElementById('codeInput');
+const status=document.getElementById('status');
+const resultArea=document.getElementById('resultArea');
 
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-    const docRef = doc(db, "gameConfig", "cards");
+let serverConfig=null;
+let unlocked=false;
+let revealed=new Set();
 
-    const gridWrap = document.getElementById('gridWrap');
-    const verifyBtn = document.getElementById('verifyBtn');
-    const codeInput = document.getElementById('codeInput');
-    const status = document.getElementById('status');
-    const resultArea = document.getElementById('resultArea');
+function buildGrid(){
+  gridWrap.innerHTML='';
+  for(let i=0;i<9;i++){
+    const c=document.createElement('div');
+    c.className='card locked';
+    c.dataset.index=i;
+    c.innerHTML=`<div class="label">Kartu ${i+1}</div><div class="badge">?</div>`;
+    c.addEventListener('click',onCardClick);
+    gridWrap.appendChild(c);
+  }
+}
 
-    let serverConfig = null;
-    let unlocked = false;
-    let revealed = new Set();
+function setStatus(txt){status.textContent='Status: '+txt;}
 
-    function buildGrid(){
-      gridWrap.innerHTML = '';
-      for(let i=0;i<9;i++){
-        const c = document.createElement('div');
-        c.className = 'card locked';
-        c.dataset.index = i;
-        c.innerHTML = `<div class="label">Kartu ${i+1}</div><div class="badge">?</div>`;
-        c.addEventListener('click', onCardClick);
-        gridWrap.appendChild(c);
-      }
-    }
+async function fetchConfig(){
+  setStatus('Memuat konfigurasi...');
+  try{
+    const snap=await getDoc(docRef);
+    if(snap.exists()){
+      serverConfig=snap.data();
+      setStatus('Siap - data tersedia');
+      onSnapshot(docRef,s=>{
+        if(!s.exists()) return;
+        serverConfig=s.data();
+        setStatus('Data diupdate oleh admin');
+        if(!unlocked) buildGrid();
+      });
+    }else{setStatus('Belum ada data.');}
+  }catch(err){console.error(err);setStatus('Gagal: '+err.message);}
+}
 
-    function setStatus(txt, type='info'){
-      status.textContent = 'Status: ' + txt;
-      codeInput.classList.remove('correct','wrong');
-      if(type==='correct') codeInput.classList.add('correct');
-      if(type==='wrong') codeInput.classList.add('wrong');
-    }
+function onCardClick(e){
+  const el=e.currentTarget;
+  const idx=Number(el.dataset.index);
+  if(!unlocked || revealed.has(idx)) return;
+  const cards=serverConfig?.cards||[];
+  const value=cards[idx]||'Kosong';
+  el.classList.add('revealed');
+  el.querySelector('.label').textContent=value;
+  el.querySelector('.badge').textContent=value==='Platinum'?'P':value==='Diamond'?'D':value==='Super Diamond'?'S':'?';
+  revealed.add(idx);
 
-    async function fetchConfig(){
-      setStatus('memuat konfigurasi...');
-      try{
-        const snap = await getDoc(docRef);
-        if(snap.exists()){
-          serverConfig = snap.data();
-          setStatus('siap - data tersedia');
-          onSnapshot(docRef, (s)=>{
-            if(!s.exists()) return;
-            serverConfig = s.data();
-            setStatus('data diupdate oleh admin');
-            if(!unlocked) buildGrid();
-          });
-        }else{
-          serverConfig = null;
-          setStatus('belum ada konfigurasi (tunggu admin)');
-        }
-      }catch(err){
-        console.error(err); setStatus('gagal memuat: '+err.message,'wrong');
-      }
-    }
+  const msg=document.createElement('div');
+  msg.className='small';
+  msg.textContent=`Kamu membuka Kartu ${idx+1}: ${value}`;
+  resultArea.prepend(msg);
+}
 
-    function onCardClick(e){
-      const el = e.currentTarget;
-      const idx = Number(el.dataset.index);
-      if(!unlocked || revealed.has(idx)) return;
+verifyBtn.addEventListener('click',()=>{
+  const code=(codeInput.value||'').trim();
+  if(!serverConfig){setStatus('Tidak ada konfigurasi');return;}
+  if(code===serverConfig.code){unlocked=true;setStatus('Kode benar');document.querySelectorAll('.card').forEach(c=>c.classList.remove('locked'));}
+  else{unlocked=false;setStatus('Kode salah');}
+});
 
-      const cards = serverConfig?.cards || [];
-      const value = cards[idx] || 'Kosong';
-      el.classList.add('revealed');
-      el.querySelector('.label').textContent = value;
-      el.querySelector('.badge').textContent = value==='Platinum'?'P':value==='Diamond'?'D':value==='Super Diamond'?'S':'?';
-      revealed.add(idx);
-
-      const msg = document.createElement('div');
-      msg.className = 'small';
-      msg.textContent = `Kamu membuka Kartu ${idx+1}: ${value}`;
-      resultArea.prepend(msg);
-    }
-
-    verifyBtn.addEventListener('click', ()=>{
-      const code = (codeInput.value || '').trim();
-      if(!serverConfig){
-        setStatus('tidak ada konfigurasi di server','wrong');
-        return;
-      }
-      if(code === serverConfig.code){
-        unlocked = true;
-        setStatus('kode benar — kamu boleh menebak!', 'correct');
-        document.querySelectorAll('.card').forEach(c=>c.classList.remove('locked'));
-      }else{
-        unlocked = false;
-        setStatus('kode salah — coba lagi','wrong');
-      }
-    });
-
-    buildGrid();
-    fetchConfig();
-  </script>
+buildGrid();
+fetchConfig();
+</script>
 </body>
 </html>
