--- a/index.html
+++ b/index.html
@@ -2,30 +2,123 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>User - Tebak Kartu</title>
 <style>
-body{margin:0;font-family:Inter,Poppins,sans-serif;background:#080808;color:#fff;display:flex;justify-content:center;align-items:center;min-height:100vh;padding:20px;}
-.wrap{width:100%;max-width:920px;background:#111;padding:20px;border-radius:12px;border:1px solid rgba(212,175,55,0.1);}
-h1{color:#d4af37;margin:0 0 8px;}
+body{
+  margin:0;
+  font-family:'Poppins',Inter,sans-serif;
+  background:#080808;
+  color:#fff;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  min-height:100vh;
+  padding:20px;
+}
+.wrap{
+  width:100%;
+  max-width:920px;
+  background:#111;
+  padding:20px;
+  border-radius:12px;
+  border:1px solid rgba(212,175,55,0.1);
+}
+h1{color:#d4af37;margin:0 0 8px;font-weight:700;}
+h2{color:#d4af37;margin:10px 0;font-size:16px;font-weight:500;}
 .code-row{display:flex;gap:10px;align-items:center;margin-bottom:18px;}
-input{padding:10px;border-radius:8px;border:none;background:#0b0f10;color:#fff;}
-.btn{background:#d4af37;color:#111;padding:10px 12px;border-radius:8px;border:none;cursor:pointer;}
-.grid{display:grid;grid-template-columns:repeat(3,1fr);gap:14px;}
-.card{height:140px;border-radius:10px;background:#0b0b0b;border:1px solid rgba(212,175,55,0.05);display:flex;align-items:center;justify-content:center;cursor:pointer;position:relative;perspective:1000px;}
-.card-inner{width:100%;height:100%;transition:transform 0.6s;transform-style:preserve-3d;position:relative;}
+input{
+  padding:10px;
+  border-radius:8px;
+  border:none;
+  background:#0b0f10;
+  color:#fff;
+  flex:1;
+}
+.btn{
+  background:#d4af37;
+  color:#111;
+  padding:10px 12px;
+  border-radius:8px;
+  border:none;
+  cursor:pointer;
+  font-weight:600;
+}
+.grid{
+  display:grid;
+  grid-template-columns:repeat(3,1fr);
+  gap:14px;
+}
+.card{
+  height:160px;
+  border-radius:10px;
+  background:#0b0b0b;
+  border:1px solid rgba(212,175,55,0.05);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  cursor:pointer;
+  position:relative;
+  perspective:1000px;
+  font-weight:500;
+}
+.card-inner{
+  width:100%;
+  height:100%;
+  transition:transform 0.6s;
+  transform-style:preserve-3d;
+  position:relative;
+}
 .card.revealed .card-inner{transform:rotateY(180deg);}
-.card-front, .card-back{position:absolute;width:100%;height:100%;backface-visibility:hidden;display:flex;align-items:center;justify-content:center;border-radius:10px;}
-.card-front{background:#0b0b0b;color:#bfc6c9;flex-direction:column;}
-.card-back{background:#d4af37;color:#111;transform:rotateY(180deg);flex-direction:column;}
-.badge{position:absolute;top:10px;right:10px;background:rgba(0,0,0,0.4);color:#111;padding:4px 6px;border-radius:6px;font-weight:700;}
+.card-front, .card-back{
+  position:absolute;
+  width:100%;
+  height:100%;
+  backface-visibility:hidden;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  border-radius:10px;
+}
+.card-front{background:#0b0b0b;color:#bfc6c9;}
+.card-back{
+  background:#1a1a1a;
+  color:#d4af37;
+  transform:rotateY(180deg);
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+}
+.card-back .label{font-size:16px;font-weight:700;margin-bottom:6px;}
+.card .badge{
+  position:absolute;
+  top:10px;
+  right:10px;
+  background:rgba(0,0,0,0.4);
+  color:#fff;
+  padding:4px 6px;
+  border-radius:6px;
+  font-weight:700;
+}
 .result-area{margin-top:16px;}
 .small{font-size:13px;color:#bfc6c9;}
+@media(max-width:640px){
+  .grid{grid-template-columns:repeat(2,1fr);}
+  .card{height:140px;}
+}
 </style>
 </head>
 <body>
 <div class="wrap">
 <h1>Tebak Kartu</h1>
+<h2>Daftar Hadiah:</h2>
+<ul class="small">
+  <li>3 Platinum - 10,000</li>
+  <li>3 Diamond - 25,000</li>
+  <li>3 Super Diamond - 500,000</li>
+</ul>
 <div class="code-row">
 <input id="codeInput" placeholder="Kode akses..."/>
 <button id="verifyBtn" class="btn">Verify</button>
@@ -66,12 +159,6 @@ let unlocked = false;
 let revealed = new Set();
 const MAX_SELECTION = 3;
 
-const PRIZES = {
-  'Platinum':'10,000',
-  'Diamond':'25,000',
-  'Super Diamond':'500,000'
-};
-
 function buildGrid(cards){
   gridWrap.innerHTML='';
   for(let i=0;i<9;i++){
@@ -87,7 +174,6 @@ function buildGrid(cards){
         </div>
         <div class="card-back">
           <div class="label">${cardType}</div>
-          <div class="prize">Hadiah: ${PRIZES[cardType] || '-'}</div>
         </div>
       </div>
     `;
@@ -133,7 +219,7 @@ async function onCardClick(e){
   const cardType = serverCards[idx] || 'Kosong';
   const msg = document.createElement('div');
   msg.className='small';
-  msg.textContent=`Kamu membuka Kartu ${idx+1}: ${cardType} - Hadiah: ${PRIZES[cardType]||'-'}`;
+  msg.textContent=`Kamu membuka Kartu ${idx+1}: ${cardType}`;
   resultArea.prepend(msg);
 }
 
@@ -150,12 +236,10 @@ verifyBtn.addEventListener('click', async ()=>{
     return;
   }
 
-  // kode valid
   unlocked = true;
   setStatus('Kode benar — kamu bisa membuka kartu!');
   document.querySelectorAll('.card').forEach(c=>c.classList.remove('locked'));
 
-  // tandai kode sebagai digunakan
   const updateObj = {};
   updateObj[code]=true;
   update(ref(db, "gameConfig/usedCodes"), updateObj);
