--- a/index.html
+++ b/index.html
@@ -2,135 +2,50 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 <title>User - Tebak Kartu</title>
 <style>
-body{
-  margin:0;
-  font-family:'Poppins',Inter,sans-serif;
-  background:#080808;
-  color:#fff;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  min-height:100vh;
-  padding:20px;
-}
-.wrap{
-  width:100%;
-  max-width:920px;
-  background:#111;
-  padding:20px;
-  border-radius:12px;
-  border:1px solid rgba(212,175,55,0.1);
-}
-h1{color:#d4af37;margin:0 0 8px;font-weight:700;}
-h2{color:#d4af37;margin:10px 0;font-size:16px;font-weight:500;}
+body{margin:0;font-family:Inter,Poppins,sans-serif;background:#080808;color:#fff;display:flex;justify-content:center;align-items:center;min-height:100vh;padding:20px;}
+.wrap{width:100%;max-width:920px;background:#111;padding:20px;border-radius:12px;border:1px solid rgba(212,175,55,0.1);}
+h1{color:#d4af37;margin-bottom:10px;}
 .code-row{display:flex;gap:10px;align-items:center;margin-bottom:18px;}
-input{
-  padding:10px;
-  border-radius:8px;
-  border:none;
-  background:#0b0f10;
-  color:#fff;
-  flex:1;
-}
-.btn{
-  background:#d4af37;
-  color:#111;
-  padding:10px 12px;
-  border-radius:8px;
-  border:none;
-  cursor:pointer;
-  font-weight:600;
-}
-.grid{
-  display:grid;
-  grid-template-columns:repeat(3,1fr);
-  gap:14px;
-}
-.card{
-  height:160px;
-  border-radius:10px;
-  background:#0b0b0b;
-  border:1px solid rgba(212,175,55,0.05);
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  cursor:pointer;
-  position:relative;
-  perspective:1000px;
-  font-weight:500;
-}
-.card-inner{
-  width:100%;
-  height:100%;
-  transition:transform 0.6s;
-  transform-style:preserve-3d;
-  position:relative;
-}
-.card.revealed .card-inner{transform:rotateY(180deg);}
-.card-front, .card-back{
-  position:absolute;
-  width:100%;
-  height:100%;
-  backface-visibility:hidden;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
-  border-radius:10px;
-}
-.card-front{background:#0b0b0b;color:#bfc6c9;}
-.card-back{
-  background:#1a1a1a;
-  color:#d4af37;
-  transform:rotateY(180deg);
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
-}
-.card-back .label{font-size:16px;font-weight:700;margin-bottom:6px;}
-.card .badge{
-  position:absolute;
-  top:10px;
-  right:10px;
-  background:rgba(0,0,0,0.4);
-  color:#fff;
-  padding:4px 6px;
-  border-radius:6px;
-  font-weight:700;
-}
+input{padding:10px;border-radius:8px;border:none;background:#0b0f10;color:#fff;}
+.btn{background:#d4af37;color:#111;padding:10px 12px;border-radius:8px;border:none;cursor:pointer;}
+.grid{display:grid;grid-template-columns:repeat(3,1fr);gap:14px;}
+.card{height:140px;border-radius:10px;background:#0b0b0b;border:1px solid rgba(212,175,55,0.05);display:flex;align-items:center;justify-content:center;cursor:pointer;position:relative;transition:transform .25s, transform-style .25s;}
+.card:hover{transform:translateY(-6px) rotateY(0deg);box-shadow:0 12px 30px rgba(0,0,0,0.4);}
+.card.locked{filter:grayscale(.2) blur(.2px);cursor:not-allowed;}
+.card.revealed{background:rgba(212,175,55,0.1);}
+.card .label{color:#bfc6c9;text-align:center;}
+.badge{position:absolute;top:10px;right:10px;background:rgba(0,0,0,0.4);color:#d4af37;padding:4px 6px;border-radius:6px;font-weight:700;}
 .result-area{margin-top:16px;}
 .small{font-size:13px;color:#bfc6c9;}
-@media(max-width:640px){
-  .grid{grid-template-columns:repeat(2,1fr);}
-  .card{height:140px;}
-}
+.prize-list{display:flex;flex-wrap:wrap;gap:8px;margin-top:12px;}
+.prize-item{flex:1 1 30%;background:#0b0b0b;padding:8px;border-radius:8px;border:1px solid rgba(212,175,55,0.05);text-align:center;font-size:14px;}
 </style>
 </head>
 <body>
 <div class="wrap">
 <h1>Tebak Kartu</h1>
-<h2>Daftar Hadiah:</h2>
-<ul class="small">
-  <li>3 Platinum - 10,000</li>
-  <li>3 Diamond - 25,000</li>
-  <li>3 Super Diamond - 500,000</li>
-</ul>
 <div class="code-row">
 <input id="codeInput" placeholder="Kode akses..."/>
 <button id="verifyBtn" class="btn">Verify</button>
 <div class="small" id="status">Status: belum terkoneksi</div>
 </div>
+
+<div class="prize-list">
+  <div class="prize-item">Platinum: 10,000</div>
+  <div class="prize-item">Diamond: 25,000</div>
+  <div class="prize-item">Super Diamond: 500,000</div>
+</div>
+
 <div id="gridWrap" class="grid"></div>
 <div class="result-area" id="resultArea"></div>
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-import { getDatabase, ref, onValue, get, child, update } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
+import { getDatabase, ref, get, set, onValue, push } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
 const firebaseConfig = {
   apiKey: "AIzaSyDlpuf_uIlpmr2ybAqpJ2GTTRW-t86PGf0",
@@ -145,107 +60,101 @@ const firebaseConfig = {
 
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
-const cardsRef = ref(db,"gameConfig/cards");
-const codesRef = ref(db,"gameConfig/usedCodes");
+const dbRef = ref(db, "gameConfig/cards");
+const usedRef = ref(db, "gameConfig/usedCodes");
 
-const gridWrap = document.getElementById('gridWrap');
-const verifyBtn = document.getElementById('verifyBtn');
-const codeInput = document.getElementById('codeInput');
-const status = document.getElementById('status');
-const resultArea = document.getElementById('resultArea');
+const gridWrap=document.getElementById('gridWrap');
+const verifyBtn=document.getElementById('verifyBtn');
+const codeInput=document.getElementById('codeInput');
+const status=document.getElementById('status');
+const resultArea=document.getElementById('resultArea');
 
-let serverCards = [];
-let unlocked = false;
-let revealed = new Set();
-const MAX_SELECTION = 3;
+let serverConfig=null;
+let unlocked=false;
+let revealed=new Set();
+let maxSelect=3;
+let selectedCount=0;
 
-function buildGrid(cards){
+function buildGrid(){
   gridWrap.innerHTML='';
   for(let i=0;i<9;i++){
-    const cardType = cards[i] || 'Kosong';
-    const c = document.createElement('div');
+    const c=document.createElement('div');
     c.className='card locked';
     c.dataset.index=i;
-    c.innerHTML=`
-      <div class="card-inner">
-        <div class="card-front">
-          <div class="label">Kartu ${i+1}</div>
-          <div class="badge">?</div>
-        </div>
-        <div class="card-back">
-          <div class="label">${cardType}</div>
-        </div>
-      </div>
-    `;
+    c.innerHTML=`<div class="label">Kartu ${i+1}</div><div class="badge">?</div>`;
     c.addEventListener('click',onCardClick);
     gridWrap.appendChild(c);
   }
 }
 
-function setStatus(txt){status.textContent='Status: '+txt;}
-
-async function fetchCards(){
-  setStatus('Memuat kartu...');
-  onValue(cardsRef,(snap)=>{
-    if(snap.exists()){
-      serverCards = snap.val().cards || [];
-      buildGrid(serverCards);
-      setStatus('Kartu siap');
-    } else {
-      setStatus('Belum ada konfigurasi kartu');
-    }
-  });
+function setStatus(txt){
+  status.textContent='Status: '+txt;
 }
 
-async function onCardClick(e){
-  const el = e.currentTarget;
-  const idx = Number(el.dataset.index);
-  if(!unlocked || revealed.has(idx)) return;
-  if(revealed.size >= MAX_SELECTION){
-    setStatus('Kamu hanya bisa membuka 3 kartu');
-    return;
-  }
-
-  el.classList.add('revealed');
-  revealed.add(idx);
-
-  if(revealed.size >= MAX_SELECTION){
-    document.querySelectorAll('.card').forEach(c=>{
-      if(!revealed.has(Number(c.dataset.index))) c.classList.add('locked');
+async function fetchConfig(){
+  setStatus('Memuat konfigurasi...');
+  try{
+    onValue(dbRef,(snap)=>{
+      if(snap.exists()){
+        serverConfig = snap.val();
+        setStatus('Siap - data tersedia');
+        if(!unlocked) buildGrid();
+      }else{setStatus('Belum ada konfigurasi');}
     });
-    setStatus('Kamu sudah membuka 3 kartu');
-  }
-
-  const cardType = serverCards[idx] || 'Kosong';
-  const msg = document.createElement('div');
-  msg.className='small';
-  msg.textContent=`Kamu membuka Kartu ${idx+1}: ${cardType}`;
-  resultArea.prepend(msg);
+  }catch(err){console.error(err);setStatus('Gagal: '+err.message);}
 }
 
-// verifikasi kode sekali pakai
-verifyBtn.addEventListener('click', async ()=>{
-  const code = (codeInput.value||'').trim();
-  if(!code){setStatus('Masukkan kode!'); return;}
+function onCardClick(e){
+  if(selectedCount>=maxSelect) return;
+  const el=e.currentTarget;
+  const idx=Number(el.dataset.index);
+  if(!unlocked || revealed.has(idx)) return;
+  const cards = serverConfig?.cards||[];
+  const value = cards[idx]||'Kosong';
+  el.classList.add('revealed');
+  el.querySelector('.label').textContent=value;
+  el.querySelector('.badge').textContent=value==='Platinum'?'P':value==='Diamond'?'D':value==='Super Diamond'?'S':'?';
+  revealed.add(idx);
+  selectedCount++;
 
-  const snap = await get(child(ref(db), "gameConfig/usedCodes"));
-  const usedCodes = snap.exists() ? snap.val() : {};
+  const msg=document.createElement('div');
+  msg.className='small';
+  msg.textContent=`Kamu membuka Kartu ${idx+1}: ${value}`;
+  resultArea.prepend(msg);
 
-  if(usedCodes[code]){
-    setStatus('Kode sudah digunakan, tidak bisa dipakai lagi');
-    return;
+  // jika sudah pilih maxSelect, simpan ke usedCodes
+  if(selectedCount>=maxSelect){
+    saveUsedCode();
   }
+}
 
-  unlocked = true;
-  setStatus('Kode benar — kamu bisa membuka kartu!');
-  document.querySelectorAll('.card').forEach(c=>c.classList.remove('locked'));
+async function saveUsedCode(){
+  if(!serverConfig) return;
+  const code = codeInput.value.trim();
+  const cards = Array.from(gridWrap.querySelectorAll('.card')).map(c=>{
+    return c.classList.contains('revealed') ? c.querySelector('.label').textContent : null;
+  });
+  try{
+    // buat kode hanya sekali pakai
+    const snap = await get(ref(db, "gameConfig/usedCodes/"+code));
+    if(snap.exists()){
+      setStatus("Kode sudah pernah dipakai");
+      return;
+    }
+    await set(ref(db, "gameConfig/usedCodes/"+code), {cards});
+    setStatus("Kode & kartu tersimpan di histori ✓");
+  }catch(err){console.error(err); setStatus("Gagal menyimpan: "+err.message);}
+}
 
-  const updateObj = {};
-  updateObj[code]=true;
-  update(ref(db, "gameConfig/usedCodes"), updateObj);
+verifyBtn.addEventListener('click',()=>{
+  const code = (codeInput.value||'').trim();
+  if(!serverConfig){setStatus('Tidak ada konfigurasi');return;}
+  if(code===serverConfig.code){unlocked=true;setStatus('Kode benar — pilih kartu!');document.querySelectorAll('.card').forEach(c=>c.classList.remove('locked'));}
+  else{unlocked=false;setStatus('Kode salah');}
 });
 
-fetchCards();
+buildGrid();
+fetchConfig();
 </script>
 </body>
 </html>
